--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.1 || ^8.0"
+    "php": "^7.4 || ^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.5 || ^8.0 || ^9.0",
+    "phpunit/phpunit": "^9.0",
     "php-coveralls/php-coveralls": "^2.0"
   },
   "autoload": {
