--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "php-coveralls/php-coveralls": "^2.0"
+    "php-coveralls/php-coveralls": "^2.0",
+    "vimeo/psalm": "5.17.0"
   },
   "autoload": {
     "psr-4": {
