--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.4 || ^8.0"
+    "php": "^8.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
