--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,3 +76,9 @@ jobs:
 
       - name: Run Psalm
         run: vendor/bin/psalm --no-progress
+
+  coding-standard:
+    name: Coding Standard
+    uses: brick/coding-standard/.github/workflows/coding-standard.yml@v2
+    with:
+      working-directory: "tools/ecs"
